Fixed intro overlap issue

--- a/index.css
+++ b/index.css
@@ -119,19 +119,25 @@ html {
 }
 
 /* To prevent intro text from overflowing to the next section on smaller screens */
-@media (max-height: 33rem) {
-    .intro-bottom__text {
-        display: none;
+@media (max-height: 47rem) {
+    .intro__spacer {
+        height: auto;
     }
 }
 
-@media (max-height: 25rem) {
+@media (max-height: 40rem) {
     .intro-bottom__icon {
         display: none;
     }
 }
 
-@media (max-height: 15rem) {
+@media (max-height: 32rem) {
+    .intro__disappear {
+        display: none;
+    }
+}
+
+@media (max-height: 25rem) {
     .intro__text {
         display: none;
     }
